# queries-rj-sms

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .user.yml  CLAUDE.md  README.md  REMOVEME_dbt_compile_all_deprecations.txt  dbt_project.yml  et --hard HEAD@{15}  metadata.json  package-lock.yml  packages.yml  profiles.yml  pull_request_template.md  pyproject.toml  recce.ps1  recce.sh  requirements.txt  settings.json
.github/: CODEOWNERS
.github/workflows/: cd.yaml  dbt-command.yaml  dbt-compile.yaml  metadata_automation.yaml  query_automation.yaml  sql-linter.yaml
.github/workflows/scripts/: create_dbt_run_command.py  metadata_to_dbt_schema.py  query-automation.py
analysis/mapping_ergon/: ergon_unidades_string_match.sql  ergon_vs_cnes.sql
analysis/subgeral/matheus/: trajetos_obitos_infantis.sql
data/estoque/: apv_atendimento_dia.csv  properties.yml
macros/: add_accents_bairros.sql  add_accents_estabelecimento.sql  add_tilde_to_saints.sql  anonimize.sql  aux_remove_person_description.sql  aux_remove_prefix.sql  aux_remove_suffix.sql  avalia_protocolo_consultas_minimas.sql  base64_to_string.sql  calculate_age.sql  calculate_jaccard.sql  calculate_levenshtein.sql  calculate_median.sql  capitalize_first_letter.sql  cdi_date_cleaning.sql  cidade_cep.sql  clean_abe_obs.sql  clean_bairro.sql  clean_cid.sql  clean_cidade.sql  clean_estrategia_vacina.sql  clean_lote_vacina.sql  clean_name_string.sql  clean_numeric.sql  clean_numeric_string.sql  clean_proced_name.sql  dedup_array_of_struct.sql  dict_to_json.sql  eliminate_babies.sql  generate_schema_name.sql  get_last_partition_date.sql  is_same_name.sql  json_field.sql  monitora_cancer_dias_atraso.sql  monitora_cancer_pesos_clinicos.sql  monitora_cancer_subscore.sql  monitora_cancer_subscore_normalizado.sql  padroniza_dose_vacina.sql  padroniza_telefone_whatsapp.sql  padronize_cep.sql  (+23 more)
macros/dbt_internal/: generate_schema_name.sql
macros/limpeza/estabelecimento/: add_accents_estabelecimento.sql  estabelecimento_remove_apendices.sql  proper_estabelecimento.sql
macros/monitora_cancer/: monitora_cancer_criterio_cross_evento.sql  monitora_cancer_criterio_intra_evento.sql  monitora_cancer_dias_atraso.sql  monitora_cancer_fator_risco.sql  monitora_cancer_gravidade_criterio.sql
macros/subpav/: _macros_schema.yml  extract_competencia_from_path.sql  normalize_null.sql  repec_utils.sql  sinanrio_utils.sql  sinanrio_utils_schema.yml
models/brutos_cnes/: brutos_cnes__estabelecimento.sql  gestao_nivel_atencao.sql  schema_brutos_cnes.yml  src_brutos_cnes.yml
models/brutos_estoque_central_tpc/: brutos_estoque_central_tpc__estoque_posicao.sql  schema_brutos_estoque_central_tpc.yml  src_brutos_estoque_central_tpc.yml
models/brutos_prontuario_vitai/: brutos_prontuario_vitai__estoque_movimento.sql  brutos_prontuario_vitai__estoque_posicao.sql
models/brutos_sheets/: estabelecimento_auxiliar.sql  schema_brutos_sheets.yml  src_brutos_sheets.yml
models/core/: int_estoque__material_valor_unitario_tpc.sql
models/core_sms/: fct_estoque_posicao.sql
models/dump_vitai/: schema.yml
models/example/: schema.yml
models/example/sms_covid/: srag.sql
models/marts/acolher_mais/: mart__acolher_mais__busca.sql  mart__acolher_mais__estabelecimentos.sql  mart__acolher_mais__historico.sql  mart__acolher_mais__profissionais.sql  mart__acolher_mais__regulacao.sql
models/marts/cnes_subgeral/: _mart_cnes_subgeral_schema.yml  _mart_cnes_subgeral_sources.yml  estabelecimento_sus_mrj_serie_historica.sql  mart_cnes_subgeral__equipamentos_mrj_sus.sql  mart_cnes_subgeral__habilitacoes_mrj_sus.sql  mart_cnes_subgeral__leitos_mrj_sus.sql  mart_cnes_subgeral__profissionais_mrj_sus.sql
models/marts/cnes_subgeral_tabelao/: _cnes_subgeral_tabelao_schema.yml  equipamentos_mrj_sus_tabelao.sql  habilitacoes_mrj_sus_tabelao.sql  leitos_mrj_sus_tabelao.sql  profissionais_mrj_sus_tabelao.sql
models/marts/dengue/: _dengue_estoque_schema.yml  mart_dengue__estoque.sql
models/marts/estoque/: _mart_estoque_schema.yml  mart_estoque__cobertura_remume.sql  (+13 more)
models/prep_estoque/: dispensacao_agrupado_grupo_abc_e_material.sql  dispensacao_media_mensal.sql  dispensacao_serie_historica.sql  material_curva_abc.sql  material_parado.sql
models/raw_prontuario_vitai/: raw_prontuario_vitai__estoque_posicao.sql  schema.yml  src_raw_prontuario_vitai.yml
models/saude_dados_mestres/: estabelecimento.sql
models/saude_estoque/: estoque_movimento.sql  estoque_posicao.sql  saude_estoque__estoque_posicao.sql  schema_saude_estoque.yml
models/saude_prontuario_vitai/: saude_prontuario_vitai__estoque_posicao.sql  schema.yml  src_saude_prontuario_vitai.yml
models/sms_covid/: srag.sql
tests/: assert_positive_values_for_saude_prontuario_vitai_staging.sql
tests/dados_mestres/: assert_freshness_for_dados_mestres__estabelecimentos.sql
tests/generic/: assert_chegando_todas_unidades_de_saude.sql  assert_episodios_com_paciente_cadastrado.sql  assert_tem_registro_de_prontuario_de_todas_unidades_de_saude.sql
tests/raw/: mart_sheets__usuarios_permitidos__validacao.sql
tools/: recce.md  recce.sh  run-diff.ps1  run-diff.py  run-diff.sh
(+1590 files in other folders)
