[tool.poetry]
name = "queries-rj-sms"
version = "0.1.0"
description = ""
authors = ["Pedro Marques <pedrovitor.marques@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
agate = "1.7.1"
anyio = "4.3.0"
attrs = "23.1.0"
babel = "2.13.1"
black = "23.10.1"
cachetools = "5.3.2"
certifi = "2023.7.22"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
dbt-bigquery = "1.7.0"
dbt-core = "1.7.0"
dbt-extractor = "0.5.0"
dbt-semantic-interfaces = "0.4.0"
fastapi = "0.110.0"
gitdb = "4.0.11"
gitpython = "3.1.43"
google-api-core = "2.12.0"
google-auth = "2.23.4"
google-cloud-bigquery = "3.13.0"
google-cloud-core = "2.3.3"
google-cloud-dataproc = "5.7.0"
google-cloud-storage = "2.13.0"
google-crc32c = "1.5.0"
google-resumable-media = "2.6.0"
googleapis-common-protos = "1.61.0"
grpc-google-iam-v1 = "0.12.6"
grpcio = "1.59.2"
grpcio-status = "1.59.2"
h11 = "0.14.0"
idna = "3.4"
importlib-metadata = "6.8.0"
isodate = "0.6.1"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
jsonschema = "4.19.2"
jsonschema-specifications = "2023.7.1"
leather = "0.3.4"
logbook = "1.5.3"
markdown-it-py = "3.0.0"
markupsafe = "2.1.3"
mashumaro = "3.10"
mdurl = "0.1.2"
minimal-snowplow-tracker = "0.0.2"
more-itertools = "10.1.0"
msgpack = "1.0.7"
mypy-extensions = "1.0.0"
networkx = "3.2.1"
packaging = "23.2"
parsedatetime = "2.6"
pathspec = "0.11.2"
platformdirs = "3.11.0"
portalocker = "2.8.2"
proto-plus = "1.22.3"
protobuf = "4.25.0"
pyasn1 = "0.5.0"
pyasn1-modules = "0.3.0"
pycparser = "2.21"
pydantic = "1.10.13"
pygments = "2.17.2"
python-dateutil = "2.8.2"
python-multipart = "0.0.9"
python-slugify = "8.0.1"
pytimeparse = "1.1.8"
pytz = "2023.3.post1"
pyyaml = "6.0.1"
recce = "0.15.0"
referencing = "0.30.2"
requests = "2.31.0"
rich = "13.7.1"
rpds-py = "0.12.0"
rsa = "4.9"
ruamel-yaml = "0.17.40"
ruamel-yaml-clib = "0.2.8"
sentry-sdk = "1.42.0"
shandy-sqlfmt = "0.21.0"
six = "1.16.0"
smmap = "5.0.1"
sniffio = "1.3.1"
sqlparse = "0.4.4"
starlette = "0.36.3"
text-unidecode = "1.3"
tqdm = "4.66.1"
typing-extensions = "4.8.0"
urllib3 = "1.26.18"
uvicorn = "0.28.0"
watchdog = "4.0.0"
websockets = "12.0"
zipp = "3.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
