[tool.poetry]
name = "queries-rj-sms"
version = "0.1.0"
description = ""
authors = [
    "Thiago Trabach <thiago.trabach@dados.rio>",
    "Danilo Fonseca <danilo.fonseca@regulacaoriorj.com.br>",
    "Vitoria Leite <vitoria.leite@dados.rio>",
    "Pedro Marques <pedro.marques@dados.rio>",
    "Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dbt-bigquery = "1.8.2"
google-cloud-storage = "^2.10.0"
prefect = "1.4.1"
prefeitura-rio = { git = "https://github.com/prefeitura-rio/prefeitura-rio.git", rev = "e1fb218837d3231e07be90d71a07ec1c9d9593f5", branch = "feat/reimplement-templates", extras = [
    "pipelines",
    "pipelines-templates",
] }
python-dotenv = "^1.0.0"
azure-storage-blob = "^12.19.0"
pandas = "^2.1.4"
gitpython = "^3.1.40"
pendulum = "^3.0.0"
sqlalchemy = "^2.0.25"
mysqlclient = "2.2.3"
validate-docbr = "^1.10.0"
cryptography = "42.0.4"
gspread="^5.12.4"
unidecode = "^1.3.8"
ping3 = "^4.0.5"
psycopg2-binary = "^2.9.9"
discord-py = "^2.3.2"
seaborn = "^0.13.2"
selenium = "4.16.0"
pydrive2 = "^1.19.0"
httpx = "^0.27.0"
simpledbf = "^0.2.6"
tables = "^3.9.2"
pyreaddbc = "^1.2.0"
openpyxl = "^3.1.5"
fiona = "1.10b2"
pymysql = "^1.1.1"
setuptools = "^70.0.0"
aiohttp = "^3.9.4"
dbt-core = "1.8.4"
zipp = "^3.19.1"
sqlparse = "^0.5.0"
tornado = "^6.4.1"
urllib3 = "^1.26.19"
pymongo = "^4.6.3"
jinja2 = "^3.1.4"
dnspython = "^2.6.1"
idna = "^3.7"
pillow = "^10.3.0"
certifi = "^2024.07.04"
tqdm = "^4.66.3"
sqlfluff = "^3.2.3"
sqlfluff-templater-dbt = "^3.2.3"
recce = "^1.10.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^6.1.0"
pre-commit = "^3.3.3"
taskipy = "^1.12.0"
isort = "^5.12.0"


[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
networkx = "^3.1"
loguru = "^0.7.0"
typer = "^0.9.0"

[tool.black]
line-length = 100
target-version = ["py310"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
lint = "black . && isort . && flake8 ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"