[tool.poetry]
name = "queries-rj-sms"
version = "0.1.0"
description = ""
authors = [
    "Thiago Trabach <thiago.trabach@dados.rio>",
    "Danilo Fonseca <danilo.fonseca@regulacaoriorj.com.br>",
    "Vitoria Leite <vitoria.leite@dados.rio>",
    "Pedro Marques <pedro.marques@dados.rio>",
    "Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dbt-core = "^1.11"
dbt-bigquery = "^1.11"
setuptools = "^82"
sqlfluff = "^3.2.3"
sqlfluff-templater-dbt = "^3.2.3"
recce = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
